// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render 1 expense with its total 1`] = `
<div>
  <h4>
    There are 
    1
     expenses.
  </h4>
  <h5>
    Total of displayed expenses:
     
    $2.35
  </h5>
</div>
`;

exports[`should render 2 expenses with their total 1`] = `
<div>
  <h4>
    There are 
    2
     expenses.
  </h4>
  <h5>
    Total of displayed expenses:
     
    $4.50
  </h5>
</div>
`;
